--- a/index.html
+++ b/index.html
@@ -6,6 +6,17 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+        <!-- Google Tag Manager -->
+        <script>(function (w, d, s, l, i) {
+                w[l] = w[l] || []; w[l].push({
+                    'gtm.start':
+                        new Date().getTime(), event: 'gtm.js'
+                }); var f = d.getElementsByTagName(s)[0],
+                    j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
+                        'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
+            })(window, document, 'script', 'dataLayer', 'GTM-M26XNK3');</script>
+        <!-- End Google Tag Manager -->
+
         <link rel="stylesheet" href="css/header.css" />
         <link rel="stylesheet" href="css/style.css" />
         <link rel="stylesheet" href="css/venda-curso.css" />
@@ -31,6 +42,10 @@
     </head>
 
     <body>
+        <!-- Google Tag Manager (noscript) -->
+        <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-M26XNK3" height="0" width="0"
+                style="display:none;visibility:hidden"></iframe></noscript>
+        <!-- End Google Tag Manager (noscript) -->
         <header class="header-wrapper">
             <div class="header-logo">
                 <img src="src/logo.png" alt="Logo" title="logo" />
