arrumada responsividade no modal, no carousel e melhorias seo

--- a/index.html
+++ b/index.html
@@ -5,6 +5,23 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="description"
+            content="Pagina teste criada usando html, css, js, e modelada a partir de um mockup feito no adobe xd">
+        <link rel="canonical" href="">
+        <meta name="author" content="joao kosour">
+        <meta name="robots" content="index">
+
+        <meta itemprop="name" content="Título da página">
+        <meta itemprop="description"
+            content="Pagina teste criada usando html, css, js, e modelada a partir de um mockup feito no adobe xd">
+
+        <meta property="og:title" content="lorem ipsum">
+        <meta property="og:description"
+            content="Pagina teste criada usando html, css, js, e modelada a partir de um mockup feito no adobe xd" />
+        <meta property="og:url" content="">
+        <meta property="og:site_name" content="Lorem" />
+        <meta property="og:type" content="website">
+
 
         <!-- Google Tag Manager -->
         <script>(function (w, d, s, l, i) {
